<resources>
    <string name="app_name">Know My Friend</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <string name="tfcCameraParams">Camera params: %1$dx%2$d @%3$.1f fps</string>
    <string name="tfcRectSize">Rect size (pixels): %1$dx%2$d</string>
    <string name="tfcZoomArea">Zoom area (pixels): %1$dx%2$d</string>
    <string name="tfcZoomLabel">Zoom: </string>
    <string name="tfcSizeLabel">Size: </string>
    <string name="tfcRotateLabel">Rotate: </string>

    <string name="facebook_app_id">325264431194518</string>


</resources>
