<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextureFromCameraActivity" >

    <SurfaceView
        android:id="@+id/cameraOnTexture_surfaceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/tfcCameraParams_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tfcCameraParams" />

    <TextView
        android:id="@+id/tfcRectSize_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tfcCameraParams_text"
        android:text="@string/tfcRectSize" />

    <TextView
        android:id="@+id/tfcZoomArea_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tfcRectSize_text"
        android:text="@string/tfcZoomArea" />


    <TextView
        android:id="@+id/tfcZoomLabel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/tfcZoom_seekbar"
        android:text="@string/tfcZoomLabel" />

    <SeekBar
        android:id="@+id/tfcZoom_seekbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tfcRotateLabel_text"
        android:layout_below="@+id/tfcZoomArea_text" />

    <TextView
        android:id="@+id/tfcSizeLabel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/tfcSize_seekbar"
        android:text="@string/tfcSizeLabel" />

    <SeekBar
        android:id="@+id/tfcSize_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tfcRotateLabel_text"
        android:layout_below="@+id/tfcZoom_seekbar" />

    <TextView
        android:id="@+id/tfcRotateLabel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/tfcRotate_seekbar"
        android:text="@string/tfcRotateLabel" />

    <SeekBar
        android:id="@+id/tfcRotate_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tfcRotateLabel_text"
        android:layout_below="@+id/tfcSize_seekbar" />

</RelativeLayout>